--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,26 @@ h2{
   font-style: normal;  
 }
 
+#card {  
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  width: 2300px;
+  height: 480px;    
+  border-radius: 40px;
+  box-shadow: 0px 0px 3px rgba(1.5, 0, 0, 0.7);
+  overflow: hidden;  
+  background-color: var(--dark);   
+}
+
+model-viewer { 
+  width: 100%;
+  height: 100%;      
+  --progress-bar-height: 5px;
+  --progress-bar-color: orange;   
+  --poster-color: transparent;  
+}
+
 /*Screen Mobile*/
 @media (max-width: 770px) {
   .containerCAPA{  
@@ -59,8 +79,8 @@ h2{
     background-image: url(../assets/img/bg-atuacao.png);
     background-repeat: no-repeat;
     background-size: 130vh;  
-    background-position: -30vh -5vh;
-    background-color: aliceblue;  
+    background-position: -30vh -8vh;  
+    background-color: rgba(232, 232, 232); 
   }
 
   .containerPRODUTOS{
@@ -69,12 +89,16 @@ h2{
     background-image: url(../assets/img/bg-funcionalidades.png);
     background-repeat: no-repeat;
     background-size: cover;      
-    background-color: aliceblue;  
+    background-color: rgba(232, 232, 232);  
   }
 
   .sizeLOGO{
     height: 40px;
     margin-top: 30px;
+  }
+
+  .marginScreen{
+    margin-top: 260px;
   }
 }
 
@@ -83,11 +107,11 @@ h2{
   .containerCAPA{  
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/bg-atuacao.png);
+    background-image: url(../assets/img/bg-atuacao.png);    
     background-repeat: no-repeat;
     background-size: 150vh;  
     background-position: -200px -10vh;
-    background-color: aliceblue;  
+    background-color: rgba(232, 232, 232);   
   }  
 
   .containerPRODUTOS{
@@ -96,11 +120,15 @@ h2{
     background-image: url(../assets/img/bg-funcionalidades.png);
     background-repeat: no-repeat;
     background-size: cover;      
-    background-color: aliceblue;  
+    background-color: rgba(232, 232, 232);  
   }
 
   .sizeLOGO{
     height: 50px;
      margin-top: 30px;
+  }
+
+  .marginScreen{
+    margin-top: 50px;
   }
 }
