--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,14 @@ h2{
   text-align: right !important;
 }
 
+b{
+  color: rgb(128, 0, 59);
+}
+
+body{
+  background-color: rgba(232, 232, 232);
+}
+
 #card {  
   margin: auto;
   display: flex;
@@ -61,7 +69,7 @@ h2{
   border-radius: 40px;
   box-shadow: 0px 0px 3px rgba(1.5, 0, 0, 0.7);
   overflow: hidden;  
-  background-color: var(--dark);   
+  background-color: var(--secondary); 
 }
 
 model-viewer { 
@@ -99,16 +107,32 @@ model-viewer {
   }
 
   .marginScreen{
-    margin-top: 150px;
+    margin-top: 15vh;
   }
 
   .marginCard{
-    margin-top: 150px;
+    padding-top: 0px;
+  }
+
+  .sizeCard{
+    width: 18rem; 
+    margin-bottom: 20px;
+  }
+
+  #card {      
+    visibility: hidden; 
   }
 }
 
 /*Screen Desktop*/
 @media (min-width: 770px) {
+
+  .descricao{
+    width: 50px;
+    height: 80px;
+    background-color: aliceblue;
+  }
+
   .containerCAPA{  
     width: 100%;
     height: 100vh;
@@ -139,6 +163,11 @@ model-viewer {
   }
 
   .marginCard{
-    margin-top: 150px;
+    padding-top: 150px;
+  }
+
+  .sizeCard{
+    width: 25rem; 
+    margin-right: 20px;
   }
 }
