--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,12 @@ h2{
   text-align: right !important;
 }
 
+h5,h6{
+  font-family: 'Rajdhani';
+  font-style: normal;   
+  text-align: center; 
+}
+
 b{
   color: rgb(128, 0, 59);
 }
@@ -64,12 +70,11 @@ body{
   margin: auto;
   display: flex;
   flex-direction: column;
-  width: 2300px;
-  height: 480px;    
-  border-radius: 40px;
-  box-shadow: 0px 0px 3px rgba(1.5, 0, 0, 0.7);
+  width: 35vw;
+  height: 85vh;  
   overflow: hidden;  
-  background-color: var(--secondary); 
+  background-color: transparent;  
+  z-index: 99;
 }
 
 model-viewer { 
@@ -77,7 +82,7 @@ model-viewer {
   height: 100%;      
   --progress-bar-height: 5px;
   --progress-bar-color: orange;   
-  --poster-color: transparent;  
+  --poster-color: transparent; 
 }
 
 /*Screen Mobile*/
@@ -122,16 +127,14 @@ model-viewer {
   #card {      
     visibility: hidden; 
   }
+
+  .descricao{
+    visibility: hidden; 
+  }
 }
 
 /*Screen Desktop*/
-@media (min-width: 770px) {
-
-  .descricao{
-    width: 50px;
-    height: 80px;
-    background-color: aliceblue;
-  }
+@media (min-width: 770px) { 
 
   .containerCAPA{  
     width: 100%;
@@ -157,9 +160,8 @@ model-viewer {
      margin-top: 30px;
   }
 
-  .marginScreen{
-    margin-top: 10vh;
-    padding-left: 12vw;
+  .marginScreen{       
+    padding-left: 10vw;
   }
 
   .marginCard{
