--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ model-viewer {
   .containerCAPA{  
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/bg-capa.png);
+    background-image: url(../assets/img/bg-capa-02.png);
     background-repeat: no-repeat;
     background-size: 130vh;  
     background-position: -30vh -8vh;  
@@ -123,7 +123,7 @@ model-viewer {
   .containerExplicacao{  
     width: 100%;
     height: 80vh;
-    background-image: url(../assets/img/bg-topo.png);    
+    background-image: url(../assets/img/bg-topo-02.png);    
     background-repeat: no-repeat;     
     background-color: rgba(232, 232, 232);        
     background-position: right;
@@ -133,7 +133,7 @@ model-viewer {
   .containerPRODUTOS{
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/bg-funcionalidades.png);
+    background-image: url(../assets/img/bg-funcionalidades-02.png);
     background-repeat: no-repeat;
     background-size: cover;      
     background-color: rgba(232, 232, 232);  
@@ -182,7 +182,7 @@ model-viewer {
   .containerCAPA{  
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/bg-capa.png);    
+    background-image: url(../assets/img/bg-capa-02.png);    
     background-repeat: no-repeat;
     background-size: 150vh;  
     background-position: -200px -10vh;
@@ -192,7 +192,7 @@ model-viewer {
   .containerExplicacao{  
     width: 100%;
     height: 80vh;
-    background-image: url(../assets/img/bg-topo.png);    
+    background-image: url(../assets/img/bg-topo-02.png);    
     background-repeat: no-repeat;     
     background-color: rgba(232, 232, 232);         
     background-position: right;
@@ -202,7 +202,7 @@ model-viewer {
   .containerPRODUTOS{
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/bg-funcionalidades.png);
+    background-image: url(../assets/img/bg-funcionalidades-02.png);
     background-repeat: no-repeat;
     background-size: cover;      
     background-color: rgba(232, 232, 232);  
