--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ model-viewer {
   }
 
   .sizeCard{
-    width: 18rem; 
+    width: 50vw; 
     margin-bottom: 20px;
   }
 
@@ -222,7 +222,7 @@ model-viewer {
   }
 
   .sizeCard{
-    width: 25rem; 
+    width: 25vw; 
     margin-right: 20px;
   }
 
