--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,32 @@ model-viewer {
   align-items: right !important;
 }
 
+.button3 {
+  font-size: 12px;
+  text-align: center;  
+  color: white; 
+  border: 0px solid #008CBA;
+  border-radius: 20px;
+  padding: 10px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  width: 90px;
+  height: 35px;
+  background-color: #008CBA; 
+  background-size: cover;
+  position: absolute;
+  margin-left:70vw;
+  margin-top:15px;
+  border: 1.5px solid #ffff;
+  opacity: 0.6;
+}
+
+.button3:hover {
+  background-color: red;
+  color: white;  
+  border: 1.5px solid #ffff;
+}
+
+
 /*Screen Mobile*/
 @media (max-width: 770px) {
   .containerCAPA{  
@@ -218,7 +244,7 @@ model-viewer {
   }
 
   .marginCard{
-    padding-top: 50px;
+    padding-top: 50px;   
   }
 
   .sizeCard{
