--- a/css/styles.css
+++ b/css/styles.css
@@ -141,12 +141,12 @@ model-viewer {
 
   .containerExplicacao{  
     width: 100%;
-    height: 80vh;
+    height: 60vh;
     background-image: url(../assets/img/bg-topo-02.png);    
     background-repeat: no-repeat;     
     background-color: rgba(232, 232, 232);        
     background-position: right;
-    background-size: 8vh;
+    background-size: 5vh;
   }  
 
   .containerPRODUTOS{
@@ -155,7 +155,7 @@ model-viewer {
     background-image: url(../assets/img/bg-funcionalidades-02.png);
     background-repeat: no-repeat;
     background-size: cover;      
-    background-color: rgba(232, 232, 232);  
+    background-color: rgba(232, 232, 232);      
   }
 
   .sizeLOGO{
@@ -168,7 +168,7 @@ model-viewer {
   }
 
   .marginCard{
-    margin-top: -25vh;
+    padding-top: -25vh;
   }
 
   .sizeCard{
