--- a/css/styles.css
+++ b/css/styles.css
@@ -101,31 +101,11 @@ model-viewer {
   align-items: right !important;
 }
 
-.button3 {
-  font-size: 12px;
-  text-align: center;  
-  color: white; 
-  border: 0px solid #008CBA;
-  border-radius: 20px;
-  padding: 10px;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  width: 90px;
-  height: 35px;
-  background-color: #008CBA; 
-  background-size: cover;
-  position: absolute;
-  margin-left:70vw;
-  margin-top:15px;
-  border: 1.5px solid #ffff;
-  opacity: 0.6;
+.verticalAlign{
+  display: flex;
+  justify-content: center;
+  align-items: center;  
 }
-
-.button3:hover {
-  background-color: red;
-  color: white;  
-  border: 1.5px solid #ffff;
-}
-
 
 /*Screen Mobile*/
 @media (max-width: 770px) {
@@ -199,7 +179,7 @@ model-viewer {
     font-style: normal;  
     text-align: left !important;
     font-size: 20px;
-  }
+  }  
 }
 
 /*Screen Desktop*/
@@ -267,5 +247,5 @@ model-viewer {
     font-style: normal;  
     text-align: left !important;
     font-size: 30px;
-  }
+  } 
 }
