--- a/css/styles.css
+++ b/css/styles.css
@@ -102,9 +102,9 @@ model-viewer {
 }
 
 .verticalAlign{
-  display: flex;
-  justify-content: center;
-  align-items: center;  
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;  
 }
 
 /*Screen Mobile*/
