--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ 
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -105,6 +106,10 @@ model-viewer {
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;  
+}
+
+button {
+  -webkit-appearance: none !important;
 }
 
 /*Screen Mobile*/
