--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -17,15 +17,26 @@ body{
   width: auto;
   height: 15vh;
   background-color: #BB7A62;
+  z-index: 10;
+}
+
+.background {
+  width: auto;
+  height: 70vh;   
+  display: flex;  
 }
 
 .background_image {
-  width: auto;
+  width: 100%;
   height: 70vh;
-  background-image: url("../assets/img/img04.jpg");
+  background-image: url("../assets/img/img03.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;  
+  background-position: center;
+  filter: blur(5px); 
+  position: absolute;
+  -webkit-filter: blur(10px);       
+  clip: rect(0px, 100vw, 70vh, 0px); 
 }
 
 .page-cards {
@@ -62,8 +73,9 @@ body{
     border-left: 40vw solid #F0E5E0;   
   }
   
-  .background_image {   
-    height: 60vh;    
+  .background_image, .background {   
+    height: 60vh;
+    clip: rect(0px, 100vw, 60vh, 0px);    
   }
 
   .triangulo {
@@ -102,8 +114,9 @@ body{
     border-left: 35vw solid #F0E5E0;   
   } 
   
-  .background_image {   
+  .background_image, .background {   
     height: 60vh;    
+    clip: rect(0px, 100vw, 60vh, 0px);
   }
 
   .triangulo {
@@ -142,8 +155,9 @@ body{
     border-left: 15vw solid #F0E5E0;   
   }  
 
-  .background_image {   
+  .background_image, .background {   
     height: 70vh;    
+    clip: rect(0px, 100vw, 70vh, 0px);
   }
 
   .triangulo {
