--- a/v2/css/styles.css
+++ b/v2/css/styles.css
@@ -5,7 +5,7 @@ a {
   color: #1D3745;
 }
 
-h1,h2,h3,h4,h5,h6 {
+body, h1,h2,h3,h4,h5,h6 {
   font-family: 'Roboto';
   font-style: normal;  
   padding: 5px;
@@ -14,6 +14,34 @@ h1,h2,h3,h4,h5,h6 {
 h2 {
   color: #1D3745;
   cursor: pointer;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.image01 img {
+  width: 160px;
+  height: auto;   
+}
+
+.image02 img {
+  width: 160px;
+  height: auto;   
+}
+
+.image03 img {
+  width: 130px;
+  height: auto;   
+}
+
+.image04 img {
+  padding: 15px;
+  width: 130px;
+  height: auto;   
 }
 
 .m-0 {
@@ -260,7 +288,7 @@ body{
   }
 
   .card {
-    width: 23vw;    
+    width: 25vw;    
   }
 
   .my-bottom {    
@@ -276,7 +304,7 @@ body{
   }
 
   h2 {
-    font-size: large;
+    font-size: x-large;
   }
   
   h3 {
